made some changes with css

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biryani</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Chicken Biryani</h1>
-    <img src="biryani.jpg" alt="biryani">
+    <h1 class="heading">Chicken Biryani</h1>
+    <div class="biryani">
+    <img src="biryani.jpg" alt="biryani"></div>
     <p>Biryani is a rice-based dish made with spices, rice (usually basmati), 
        and mixed with chicken, mutton etc. Biryani was believed to have been invented
        n the kitchen of Mughal Emperors. It is very popular in the Indian subcontinent
