--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/karahi.html">Chicken Karahi</a></li>
-    <li><a href="recipes/biryani.html">Chicken Biryani</a></li>
+    <li class="list"><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li class="list"><a href="recipes/karahi.html">Chicken Karahi</a></li>
+    <li class="list"><a href="recipes/biryani.html">Chicken Biryani</a></li>
     </ul>
 </body>
 </html>
